RELEASING: Releasing 1 package(s)
Releases:
  @nestjs-kitchen/authz@1.0.0

[skip ci]

--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestjs-kitchen/authz",
-  "private": true,
+  "private": false,
   "description": "Nest TypeScript starter repository",
   "version": "1.0.0",
   "license": "MIT",
