--- a/.syncpackrc.json
+++ b/.syncpackrc.json
@@ -7,6 +7,8 @@
     "private",
     "description",
     "version",
+    "homepage",
+    "repository",
     "author",
     "license",
     "exports",
