--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,16 @@
         "^build"
       ]
     },
+    "test:cov": {
+      "dependsOn": [
+        "^build"
+      ]
+    },
+    "test:e2e": {
+      "dependsOn": [
+        "^build"
+      ]
+    },
     "dev": {
       "cache": false,
       "persistent": true
