--- a/.github/workflows/syncpack.yml
+++ b/.github/workflows/syncpack.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: 20.x
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
       - name: Run Syncpack
         uses: JamieMason/syncpack-github-action@0.2.3
         with:
