--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,13 +56,14 @@ jobs:
         run: pnpm i
 
       - name: Run Test
-        run: pnpm test --filter=${{ matrix.name }}...
+        run: pnpm run test --filter=${{ matrix.name }}...
 
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@v2
         with:
           flag-name: ${{ matrix.name }}
-          file: ${{matrix.path}}
+          base-path: ${{ matrix.path }}
+          allow-empty: true
           parallel: true
 
   finish:
