--- a/.github/workflows/syncpack.yml
+++ b/.github/workflows/syncpack.yml
@@ -1,6 +1,12 @@
 name: Syncpack
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   syncpack:
