--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -63,6 +63,16 @@
   "engines": {
     "node": ">=20.13.0"
   },
+  "keywords": [
+    "auth",
+    "authentication",
+    "authorization",
+    "authz",
+    "JWT",
+    "NextJS",
+    "NodeJS",
+    "Session"
+  ],
   "peerDependencies": {
     "@nestjs/common": "^10.4.12",
     "@nestjs/core": "^10.4.12",
