chore(connextion-postgres): script

--- a/packages/connextion-postgres/jest.config.json
+++ b/packages/connextion-postgres/jest.config.json
@@ -1,14 +1,17 @@
 {
   "moduleFileExtensions": [
+    "ts",
     "js",
-    "json",
-    "ts"
+    "json"
   ],
   "rootDir": "src",
   "testRegex": ".*\\.spec\\.ts$",
   "transform": {
     "^.+\\.(t|j)s$": "ts-jest"
   },
+  "transformIgnorePatterns": [
+    "^.+\\.js$"
+  ],
   "collectCoverageFrom": [
     "**/*.(t|j)s"
   ],
