--- a/packages/connextion-postgres/package.json
+++ b/packages/connextion-postgres/package.json
@@ -21,6 +21,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "test": "jest",
+    "test:ci": "jest --coverage",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "test:watch": "jest --watch"
