--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "format": "biome check .",
     "format:fix": "biome check . --write",
     "prepare": "husky",
-    "test": "turbo run test:cov test:e2e"
+    "test": "turbo run test:ci"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@changesets/cli": "^2.27.10",
-    "@changesets/config": "^3.0.4",
+    "@changesets/cli": "^2.27.11",
+    "@changesets/config": "^3.0.5",
     "husky": "^9.1.7",
-    "lint-staged": "^15.2.10",
+    "lint-staged": "^15.3.0",
     "syncpack": "^13.0.0",
     "turbo": "^2.3.3"
   },
