--- a/turbo.json
+++ b/turbo.json
@@ -13,17 +13,12 @@
         "^build"
       ]
     },
-    "test:cov": {
+    "test:ci": {
       "dependsOn": [
         "^build"
       ],
       "outputs": [
         "coverage/**"
-      ]
-    },
-    "test:e2e": {
-      "dependsOn": [
-        "^build"
       ]
     },
     "dev": {
