--- a/packages/connextion/package.json
+++ b/packages/connextion/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@nestjs-kitchen/authz",
+  "name": "@nestjs-kitchen/connextion",
   "private": false,
-  "description": "Simplest authentication & authorization module in NextJS",
-  "version": "1.1.1",
+  "description": "A module builder of generic instance management in NextJS.",
+  "version": "0.0.0",
   "homepage": "https://github.com/yikenman/nestjs-kitchen",
   "repository": "https://github.com/yikenman/nestjs-kitchen",
   "author": "yikenman",
@@ -21,7 +21,7 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "test": "jest",
-    "test:ci": "jest --coverage && jest --config ./test/jest-e2e.config.json",
+    "test:ci": "jest --coverage",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.config.json",
@@ -29,31 +29,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "cookie": "^1.0.2",
-    "cookie-parser": "^1.4.7",
-    "express-session": "^1.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "msgpackr": "^1.11.2",
-    "passport-custom": "^1.1.1",
     "uid": "^2.0.2"
   },
   "devDependencies": {
     "@nestjs/common": "^10.4.12",
     "@nestjs/core": "^10.4.12",
-    "@nestjs/passport": "^10.0.3",
     "@nestjs/testing": "^10.4.12",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
-    "@types/passport": "^1.0.17",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "passport": "^0.7.0",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -65,21 +50,16 @@
     "node": ">=20.13.0"
   },
   "keywords": [
-    "auth",
-    "authentication",
-    "authorization",
-    "authz",
-    "JWT",
+    "builder",
+    "generic",
+    "instance",
+    "management",
+    "module",
     "NextJS",
-    "NodeJS",
-    "Session"
+    "NodeJS"
   ],
   "peerDependencies": {
     "@nestjs/common": "^10.4.12",
-    "@nestjs/core": "^10.4.12",
-    "@nestjs/passport": "^10.0.3",
-    "passport": "^0.7.0",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "@nestjs/core": "^10.4.12"
   }
 }
