--- a/packages/connextion-presto/package.json
+++ b/packages/connextion-presto/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@nestjs-kitchen/connextion",
+  "name": "@nestjs-kitchen/connextion-presto",
   "private": false,
-  "description": "A module builder of generic instance management in NextJS.",
-  "version": "1.0.1",
+  "description": "A flexible module to provide presto-client interface in NextJS.",
+  "version": "0.0.0",
   "homepage": "https://github.com/yikenman/nestjs-kitchen",
   "repository": "https://github.com/yikenman/nestjs-kitchen",
   "author": "yikenman",
@@ -24,15 +24,14 @@
     "test:ci": "jest --coverage",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.config.json",
-    "test:e2e:watch": "jest --config ./test/jest-e2e.config.json --watch",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "uid": "^2.0.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^10.4.15",
+    "@nestjs-kitchen/connextion": "workspace:*",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
     "jest": "^29.7.0",
@@ -46,16 +45,21 @@
     "node": ">=20.13.0"
   },
   "keywords": [
-    "builder",
-    "generic",
-    "instance",
-    "management",
+    "database",
     "module",
     "NextJS",
-    "NodeJS"
+    "NodeJS",
+    "presto",
+    "Presto",
+    "presto-client",
+    "SQL",
+    "trino",
+    "Trino"
   ],
   "peerDependencies": {
+    "@nestjs-kitchen/connextion": "workspace:*",
     "@nestjs/common": "^10.4.15",
-    "@nestjs/core": "^10.4.15"
+    "@types/presto-client": "^1.0.2",
+    "presto-client": "^1.1.0"
   }
 }
