--- a/packages/connextion-duckdb/package.json
+++ b/packages/connextion-duckdb/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@nestjs-kitchen/connextion-postgres",
+  "name": "@nestjs-kitchen/connextion-duckdb",
   "private": false,
-  "description": "A flexible module to provide node-postgres interface in NextJS.",
-  "version": "1.0.4",
+  "description": "A flexible module to provide @duckdb/node-api interface in NextJS.",
+  "version": "1.0.0",
   "homepage": "https://github.com/yikenman/nestjs-kitchen",
   "repository": "https://github.com/yikenman/nestjs-kitchen",
   "author": "yikenman",
@@ -26,13 +26,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
     "test:watch": "jest --watch"
   },
-  "dependencies": {
-    "dayjs": "^1.11.13",
-    "uid": "^2.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/testing": "^11.0.10",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.5",
     "jest": "^29.7.0",
@@ -46,20 +42,18 @@
     "node": ">=20.13.0"
   },
   "keywords": [
+    "@duckdb/node-api",
     "database",
+    "duckdb",
+    "DuckDB",
     "module",
     "NextJS",
-    "node-postgres",
     "NodeJS",
-    "pg",
-    "Postgres",
     "SQL"
   ],
   "peerDependencies": {
+    "@duckdb/node-api": "1.2.0-alpha.15",
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^11.0.10",
-    "@types/pg": "^8.11.10",
-    "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.2"
+    "@nestjs/common": "^11.0.10"
   }
 }
