--- a/packages/connextion-presto/package.json
+++ b/packages/connextion-presto/package.json
@@ -27,8 +27,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "dayjs": "^1.11.13",
-    "uid": "^2.0.2"
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
@@ -58,7 +57,7 @@
   ],
   "peerDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^10.4.15",
+    "@nestjs/common": "^11.0.10",
     "@types/presto-client": "^1.0.2",
     "presto-client": "^1.1.0"
   }
