docs(changeset): chore: Compatible with NestJS v10,v11

--- a/packages/connextion-postgres/package.json
+++ b/packages/connextion-postgres/package.json
@@ -57,7 +57,7 @@
   ],
   "peerDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^11.0.10",
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
     "@types/pg": "^8.11.10",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2"
