--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -69,10 +69,10 @@
     "Session"
   ],
   "peerDependencies": {
-    "@nestjs/common": "^11.0.10",
-    "@nestjs/core": "^11.0.10",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.10",
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "@nestjs/passport": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
     "passport": "^0.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
