--- a/packages/connextion/package.json
+++ b/packages/connextion/package.json
@@ -55,7 +55,7 @@
     "NodeJS"
   ],
   "peerDependencies": {
-    "@nestjs/common": "^11.0.10",
-    "@nestjs/core": "^11.0.10"
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0"
   }
 }
