--- a/.syncpackrc.json
+++ b/.syncpackrc.json
@@ -43,6 +43,17 @@
         "prod"
       ],
       "pinVersion": "workspace:*"
+    },
+    {
+      "label": "Ignore conflict deps",
+      "packages": [
+        "@nestjs-kitchen/authz",
+        "@nestjs-kitchen/cache-manager"
+      ],
+      "dependencies": [
+        "@nestjs/platform-express"
+      ],
+      "isIgnored": true
     }
   ]
 }
