--- a/packages/cache-manager/package.json
+++ b/packages/cache-manager/package.json
@@ -1,67 +1,61 @@
 {
-  "name": "@nestjs/cache-manager",
-  "version": "3.0.0",
-  "description": "Nest - modern, fast, powerful node.js web framework (@cache-manager)",
-  "author": "Kamil Mysliwiec",
+  "name": "@nestjs-kitchen/cache-manager",
+  "version": "1.0.0",
+  "homepage": "https://github.com/yikenman/nestjs-kitchen",
+  "repository": "https://github.com/yikenman/nestjs-kitchen",
+  "author": "yikenman",
   "license": "MIT",
-  "url": "https://github.com/nestjs/cache-manager#readme",
+  "exports": {
+    ".": {
+      "require": "./dist/index.js"
+    }
+  },
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rimraf -rf dist && tsc -p tsconfig.json",
-    "format": "prettier --write \"{lib,test}/**/*.ts\"",
-    "lint": "eslint 'lib/**/*.ts' --fix",
-    "prepublish:npm": "npm run build",
-    "publish:npm": "npm publish --access public",
-    "prepublish:next": "npm run build",
-    "publish:next": "npm publish --access public --tag next",
-    "test:e2e": "jest --config ./tests/jest-e2e.json --runInBand",
-    "prerelease": "npm run build",
-    "release": "release-it",
-    "prepare": "husky"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "test": "jest",
+    "test:ci": "jest --coverage && jest --config ./test/jest-e2e.config.json",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.config.json",
+    "test:e2e:watch": "jest --config ./test/jest-e2e.config.json --watch",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.7.1",
-    "@commitlint/config-angular": "19.7.1",
-    "@eslint/eslintrc": "3.3.0",
-    "@eslint/js": "9.21.0",
-    "@keyv/redis": "4.3.0",
-    "@nestjs/common": "11.0.11",
-    "@nestjs/core": "11.0.11",
-    "@nestjs/platform-express": "11.0.11",
-    "@nestjs/testing": "11.0.11",
-    "@types/jest": "29.5.14",
-    "@types/node": "22.13.9",
-    "@types/supertest": "6.0.2",
-    "cache-manager": "6.4.0",
-    "cacheable": "1.8.9",
-    "eslint": "9.21.0",
-    "eslint-config-prettier": "10.1.1",
-    "eslint-plugin-prettier": "5.2.3",
-    "globals": "16.0.0",
-    "husky": "9.1.7",
-    "jest": "29.7.0",
-    "keyv": "5.3.0",
-    "lint-staged": "15.4.3",
-    "prettier": "3.5.3",
-    "reflect-metadata": "0.2.2",
-    "release-it": "18.1.2",
-    "rimraf": "6.0.1",
-    "rxjs": "7.8.2",
-    "supertest": "7.0.0",
-    "ts-jest": "29.2.6",
-    "typescript": "5.8.2",
-    "typescript-eslint": "8.26.0"
+    "@keyv/redis": "^4.3.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.9",
+    "@types/supertest": "^6.0.2",
+    "cacheable": "^1.8.9",
+    "jest": "^29.7.0",
+    "keyv": "^5.3.0",
+    "reflect-metadata": "^0.2.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2"
   },
+  "engines": {
+    "node": ">=20.13.0"
+  },
+  "keywords": [
+    "cache",
+    "Cache",
+    "cache-manager",
+    "NextJS",
+    "NodeJS"
+  ],
   "peerDependencies": {
-    "@nestjs/common": "^9.0.0 || ^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^9.0.0 || ^10.0.0 || ^11.0.0",
-    "cache-manager": ">=6",
-    "rxjs": "^7.8.1"
-  },
-  "lint-staged": {
-    "**/*.{ts,json}": []
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nestjs/cache-manager"
+    "@nestjs/common": "^10.0.0 || ^11.0.0",
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "cache-manager": "^6",
+    "rxjs": "^7.8.2"
   }
 }
