--- a/packages/cache-manager/jest.config.json
+++ b/packages/cache-manager/jest.config.json
@@ -16,5 +16,8 @@
     "**/*.(t|j)s"
   ],
   "coverageDirectory": "../coverage",
-  "testEnvironment": "node"
+  "testEnvironment": "node",
+  "coveragePathIgnorePatterns": [
+    "index.ts"
+  ]
 }
