--- a/packages/cache-manager/package.json
+++ b/packages/cache-manager/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "@nestjs-kitchen/connextion-postgres",
-  "private": false,
-  "description": "A flexible module to provide node-postgres interface in NextJS.",
-  "version": "2.0.1",
+  "name": "@nestjs-kitchen/cache-manager",
+  "description": "A better caching module for NestJS, fully compatible with @nestjs/cache-manager v3",
+  "version": "1.0.0",
   "homepage": "https://github.com/yikenman/nestjs-kitchen",
   "repository": "https://github.com/yikenman/nestjs-kitchen",
   "author": "yikenman",
@@ -21,24 +20,29 @@
     "build": "tsup",
     "dev": "tsup --watch",
     "test": "jest",
-    "test:ci": "jest --coverage",
+    "test:ci": "jest --coverage && jest --config ./test/jest-e2e.config.json",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.config.json",
+    "test:e2e:watch": "jest --config ./test/jest-e2e.config.json --watch",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "dayjs": "^1.11.13",
-    "uid": "^2.0.2"
+    "node-object-hash": "^3.1.1"
   },
   "devDependencies": {
-    "@nestjs-kitchen/connextion": "workspace:*",
+    "@keyv/redis": "^4.3.0",
+    "@nestjs/platform-express": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
+    "@types/supertest": "^6.0.2",
+    "cacheable": "^1.8.9",
     "jest": "^29.7.0",
+    "keyv": "^5.3.0",
+    "reflect-metadata": "^0.2.2",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
     "tsup": "^8.4.0",
     "typescript": "^5.8.2"
   },
@@ -46,20 +50,16 @@
     "node": ">=20.13.0"
   },
   "keywords": [
-    "database",
-    "module",
+    "cache",
+    "Cache",
+    "cache-manager",
     "NextJS",
-    "node-postgres",
-    "NodeJS",
-    "pg",
-    "Postgres",
-    "SQL"
+    "NodeJS"
   ],
   "peerDependencies": {
-    "@nestjs-kitchen/connextion": "workspace:*",
     "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@types/pg": "^8.11.10",
-    "pg": "^8.13.1",
-    "reflect-metadata": "^0.2.2"
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "cache-manager": "^6",
+    "rxjs": "^7.8.2"
   }
 }
