--- a/packages/connextion-postgres/tsconfig.json
+++ b/packages/connextion-postgres/tsconfig.json
@@ -14,7 +14,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
   "include": [
     "src"
