--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -18,8 +18,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "dev": "rimraf dist && tsc -p tsconfig.build.json --watch",
     "test": "jest",
     "test:ci": "jest --coverage && jest --config ./test/jest-e2e.config.json",
     "test:cov": "jest --coverage",
@@ -48,11 +48,11 @@
     "@types/passport": "^1.0.17",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.4.0",
     "typescript": "^5.8.2"
   },
   "engines": {
