--- a/packages/cache-manager/package.json
+++ b/packages/cache-manager/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@nestjs-kitchen/cache-manager",
+  "private": false,
   "description": "A better caching module for NestJS, fully compatible with @nestjs/cache-manager v3",
   "version": "2.0.1",
   "homepage": "https://github.com/yikenman/nestjs-kitchen",
@@ -17,8 +18,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "dev": "rimraf dist && tsc -p tsconfig.build.json --watch",
     "test": "jest",
     "test:ci": "jest --coverage && jest --config ./test/jest-e2e.config.json",
     "test:cov": "jest --coverage",
@@ -40,10 +41,11 @@
     "cacheable": "^1.8.9",
     "jest": "^29.7.0",
     "keyv": "^5.3.0",
-    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
-    "tsup": "^8.4.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.2"
   },
   "engines": {
@@ -60,6 +62,7 @@
     "@nestjs/common": "^10.0.0 || ^11.0.0",
     "@nestjs/core": "^10.0.0 || ^11.0.0",
     "cache-manager": "^6",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   }
 }
