docs(changeset): chore: use tsc & remove tsup

--- a/packages/connextion/tsconfig.json
+++ b/packages/connextion/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "commonjs",
     "lib": [
       "ESNext"
     ],
@@ -10,8 +10,6 @@
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "target": "ES2021",
-    "sourceMap": true,
-    "outDir": "./dist",
     "baseUrl": "./",
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -19,10 +17,5 @@
   },
   "include": [
     "src"
-  ],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    }
   ]
 }
