--- a/packages/connextion-postgres/package.json
+++ b/packages/connextion-postgres/package.json
@@ -18,8 +18,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "dev": "rimraf dist && tsc -p tsconfig.build.json --watch",
     "test": "jest",
     "test:ci": "jest --coverage",
     "test:cov": "jest --coverage",
@@ -36,6 +36,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
     "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
