--- a/packages/connextion-postgres/tsconfig.json
+++ b/packages/connextion-postgres/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
+    "module": "commonjs",
     "lib": [
       "ESNext"
     ],
@@ -10,8 +10,6 @@
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "target": "ES2021",
-    "sourceMap": true,
-    "outDir": "./dist",
     "baseUrl": "./",
     "skipLibCheck": true,
     "esModuleInterop": true,
