--- a/packages/mybatis-mapper/package.json
+++ b/packages/mybatis-mapper/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@nestjs-kitchen/connextion-postgres",
+  "name": "@nestjs-kitchen/mybatis-mapper",
   "private": false,
-  "description": "A flexible module to provide node-postgres interface in NextJS.",
-  "version": "2.0.5",
+  "description": "A mybatis mapper in NextJS.",
+  "version": "1.0.0",
   "homepage": "https://github.com/yikenman/nestjs-kitchen",
   "repository": "https://github.com/yikenman/nestjs-kitchen",
   "author": "yikenman",
@@ -27,14 +27,16 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "dayjs": "^1.11.13",
-    "uid": "^2.0.2"
+    "chokidar": "^4.0.3",
+    "mybatis-mapper": "^0.8.0",
+    "picomatch": "^4.0.2",
+    "tinyglobby": "^0.2.13"
   },
   "devDependencies": {
-    "@nestjs-kitchen/connextion": "workspace:*",
     "@nestjs/testing": "^11.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.9",
+    "@types/picomatch": "^4.0.0",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.3.0",
@@ -47,19 +49,16 @@
   },
   "keywords": [
     "database",
+    "mapper",
     "module",
+    "mybatis",
     "NextJS",
-    "node-postgres",
     "NodeJS",
-    "pg",
-    "Postgres",
     "SQL"
   ],
   "peerDependencies": {
-    "@nestjs-kitchen/connextion": "workspace:*",
     "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@types/pg": "^8.11.10",
-    "pg": "^8.13.1",
+    "@nestjs/core": "^10.0.0 || ^11.0.0",
     "reflect-metadata": "^0.2.2"
   }
 }
