--- a/packages/csrf/package.json
+++ b/packages/csrf/package.json
@@ -40,12 +40,12 @@
     "@nestjs/testing": "^11.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-session": "^1.18.1",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.13.9",
     "@types/supertest": "^6.0.2",
     "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
-    "jest": "^29.7.0",
+    "jest": "^30.0.5",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
@@ -67,12 +67,12 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/secure-session": "^8.2.0",
     "@fastify/session": "^11.1.0",
-    "cookie-parser": "^1.4.7",
-    "express-session": "^1.18.1",
+    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/express-session": "^1.18.1",
-    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
-    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0"
+    "cookie-parser": "^1.4.7",
+    "express-session": "^1.18.1"
   },
   "peerDependencies": {
     "@nestjs/common": "^10.0.0 || ^11.0.0",
