--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -37,16 +37,22 @@
     "uid": "^2.0.2"
   },
   "devDependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/secure-session": "^8.2.0",
+    "@fastify/session": "^11.1.0",
+    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
-    "@types/express-session": "^1.18.1",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.9",
     "@types/passport": "^1.0.17",
     "@types/supertest": "^6.0.2",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
+    "fastify": "^5.5.0",
     "jest": "^30.0.5",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.0",
@@ -63,16 +69,30 @@
     "authentication",
     "authorization",
     "authz",
+    "express",
+    "Express",
+    "fastify",
+    "Fastify",
     "JWT",
     "NextJS",
     "NodeJS",
+    "passport",
+    "Passport",
     "Session"
   ],
+  "optionalDependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/secure-session": "^8.2.0",
+    "@fastify/session": "^11.1.0",
+    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
+    "@types/express-session": "^1.18.2",
+    "express-session": "^1.18.2"
+  },
   "peerDependencies": {
     "@nestjs/common": "^10.0.0 || ^11.0.0",
     "@nestjs/core": "^10.0.0 || ^11.0.0",
     "@nestjs/passport": "^10.0.0 || ^11.0.0",
-    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
     "passport": "^0.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
