docs(changeset): chore: remove nestjs v10 support

--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -40,8 +40,8 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/secure-session": "^8.2.0",
     "@fastify/session": "^11.1.0",
-    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
-    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
@@ -84,15 +84,15 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/secure-session": "^8.2.0",
     "@fastify/session": "^11.1.0",
-    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
-    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.0",
     "@types/express-session": "^1.18.2",
     "express-session": "^1.18.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^10.0.0 || ^11.0.0",
-    "@nestjs/passport": "^10.0.0 || ^11.0.0",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/passport": "^11.0.0",
     "passport": "^0.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
