--- a/packages/cache-manager/package.json
+++ b/packages/cache-manager/package.json
@@ -58,8 +58,8 @@
     "NodeJS"
   ],
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
     "cache-manager": "^6",
     "keyv": "^5",
     "reflect-metadata": "^0.2.2",
