--- a/packages/connextion-duckdb/package.json
+++ b/packages/connextion-duckdb/package.json
@@ -53,6 +53,6 @@
   "peerDependencies": {
     "@duckdb/node-api": "1.2.0-alpha.15",
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^10.0.0 || ^11.0.0"
+    "@nestjs/common": "^11.0.0"
   }
 }
