--- a/packages/connextion-duckdb/package.json
+++ b/packages/connextion-duckdb/package.json
@@ -51,8 +51,8 @@
     "SQL"
   ],
   "peerDependencies": {
-    "@duckdb/node-api": "1.2.0-alpha.15",
+    "@duckdb/node-api": "1.3.2-alpha.26",
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^10.0.0 || ^11.0.0"
+    "@nestjs/common": "^11.0.0"
   }
 }
