--- a/packages/connextion-postgres/package.json
+++ b/packages/connextion-postgres/package.json
@@ -57,9 +57,9 @@
   ],
   "peerDependencies": {
     "@nestjs-kitchen/connextion": "workspace:*",
-    "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@types/pg": "^8.11.10",
-    "pg": "^8.13.1",
+    "@nestjs/common": "^11.0.0",
+    "@types/pg": "^8.15.5",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2"
   }
 }
