--- a/packages/csrf/package.json
+++ b/packages/csrf/package.json
@@ -35,16 +35,16 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/secure-session": "^8.2.0",
     "@fastify/session": "^11.1.0",
-    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
-    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express-session": "^1.18.1",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.13.9",
     "@types/supertest": "^6.0.2",
     "cookie-parser": "^1.4.7",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "jest": "^30.0.5",
     "rimraf": "^6.0.1",
     "supertest": "^7.1.0",
@@ -67,16 +67,16 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/secure-session": "^8.2.0",
     "@fastify/session": "^11.1.0",
-    "@nestjs/platform-express": "^10.0.0 || ^11.0.0",
-    "@nestjs/platform-fastify": "^10.0.0 || ^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/platform-fastify": "^11.0.0",
     "@types/cookie-parser": "^1.4.8",
-    "@types/express-session": "^1.18.1",
+    "@types/express-session": "^1.18.2",
     "cookie-parser": "^1.4.7",
-    "express-session": "^1.18.1"
+    "express-session": "^1.18.2"
   },
   "peerDependencies": {
-    "@nestjs/common": "^10.0.0 || ^11.0.0",
-    "@nestjs/core": "^10.0.0 || ^11.0.0",
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
     "rxjs": "^7.8.2"
   }
 }
