--- a/packages/authz/package.json
+++ b/packages/authz/package.json
@@ -46,7 +46,6 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.9",
     "@types/supertest": "^6.0.2",
     "express-session": "^1.18.2",
@@ -76,19 +75,16 @@
     "NodeJS",
     "Session"
   ],
-  "optionalDependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "@fastify/secure-session": "^8.2.0",
-    "@fastify/session": "^11.1.0",
-    "@nestjs/platform-express": "^11.0.0",
-    "@nestjs/platform-fastify": "^11.0.0",
-    "@types/express-session": "^1.18.2",
-    "express-session": "^1.18.2"
-  },
   "peerDependencies": {
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
+  },
+  "peerDependenciesMeta": {
+    "@types/jsonwebtoken": {
+      "optional": true
+    }
   }
 }
